--- a/listaPresent.html
+++ b/listaPresent.html
@@ -177,6 +177,257 @@
                             </span>
                         </td>
                     </tr>
+                    <tr id="product05" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniels 200ml</span></li>
+                                <li><span class="titleProd">Dose</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">35.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr id="product06" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniel's 375 Ml</span></li>
+                                <li><span class="titleProd">Dose</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">45.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+
+                    <tr id="product07" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniels</span></li>
+                                <li><span class="titleProd">Dose</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">129.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+
+
+                    <tr id="product08" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniels Fire (Canela) </span></li>
+                                <li><span class="titleProd">1 Litro</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">129.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr id="product09" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniel's Honey </span></li>
+                                <li><span class="titleProd">1 Litro</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">129.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr id="product10" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniels Gentleman </span></li>
+                                <li><span class="titleProd">1 Litro</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">160.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr id="product11" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniels Single Barrel Select </span></li>
+                                <li><span class="titleProd">750ml</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">270.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr id="product11" class="pdr">
+                        <td id="wave" class="waves" colspan="0">
+                            <img src="shopp1.jpg">
+                        </td>
+                        <td class="description">
+                            <ul>
+                                <li><span>Whisky Jack Daniels Sinatra </span></li>
+                                <li><span class="titleProd">1 Litro</span></li>
+                            </ul>
+                        </td>
+                        <td>R$ <span class="preco">540.00</span> </td>
+                        <td class="pro_num inputqtd "><span class="qua_wrap">
+                                <span id="qtdMenos" class="minus js-minus " href="">
+                                    <i class="material-icons ">remove_circle</i>
+                                </span>
+
+                                <input id="qtd1" class="quantity " type="number" value="0" data-sku="458458">
+
+                                <span id="qtdMais" class="plus js-plus " href="">
+                                    <i class="material-icons minus ">add_circle</i>
+                                </span>
+                                <i class="iconfont icon-wuuiconxuan green f16 hide"></i></span>
+                            <div class="red mt5 js-invent-tips hide"></div>
+                        </td>
+                        <td>
+                            <span class="">R$
+                                <span class="totalItem">0,00
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
@@ -189,53 +440,53 @@
             </table>
             <div class="btnpay">
 
-                <a class="waves-effect waves-light btn-large modal-trigger"  href="#demo-modal"><i
+                <a class="waves-effect waves-light btn-large modal-trigger" href="#demo-modal"><i
                         class="material-icons left">shopping_cart</i>FINALIZAR</a>
             </div>
         </div>
     </div>
-      <!-- Modal Structure -->
- 
+    <!-- Modal Structure -->
+
     <div id="demo-modal" class="modal">
         <div class="modal-content container">
             <div class="row">
                 <form class="col s12 m12">
                     <div class="row">
-                                <div class="input-field col s6">
-                                    <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                                    <label for="first_name">First Name</label>
-                                </div>
-                            <div class="input-field col s6">
-                                <input id="last_name" type="text" class="validate">
-                                <label for="last_name">Last Name</label>
-                            </div>
+                        <div class="input-field col s6">
+                            <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                            <label for="first_name">First Name</label>
                         </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                                <label for="disabled">Disabled</label>
-                            </div>
+                        <div class="input-field col s6">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Last Name</label>
                         </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="password" type="password" class="validate">
-                                <label for="password">Password</label>
-                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+                            <label for="disabled">Disabled</label>
                         </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email">Email</label>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" type="password" class="validate">
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate">
+                            <label for="email">Email</label>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
         <div class="modal-footer">
-          <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
+            <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
         </div>
     </div>
-     
+
     </div>
     </div>
     <div class="parallax-container valign-wrapper">
